--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
             </li>
         </ul>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
