--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </main>
 
     <footer class="fixed bottom-0 left-0 z-20 p-4 w-full bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-6">
-        <span class="text-sm text-gray-500 sm:text-center">© 2022 <a href="#" class="hover:underline">NomCognom</a>. All Rights Reserved.
+        <span class="text-sm text-gray-500 sm:text-center">© 2022 <a href="#" class="hover:underline">Adrià García</a>. All Rights Reserved.
         </span>
         <ul class="flex flex-wrap items-center mt-3 text-sm text-gray-500 sm:mt-0">
             <li>
