--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<body>
+<body onload="">
     <header class="bg-gradient-to-r from-[#614385] to-[#516395] w-full py-5 mb-10 px-20">
         <h2 class="text-white text-xl container mx-auto">Gestió de cicles</h2>
     </header>
@@ -44,7 +44,7 @@
 
                 <input type="hidden" value="-1" id="editCicle"/>
                 
-                <button onClick="afegirCicle()" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Afegir cicle</button>
+                <button id="btnAfegirCicle" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Afegir cicle</button>
             </div>
 
             <div class="mb-40" id="form_cicles">
@@ -72,7 +72,7 @@
                   </div>
                 </div>
                 
-                <button onClick="afegirModul()" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Afegir mòdul</button>
+                <button id="btnAfegirModul" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Afegir mòdul</button>
             </div>   
         </div>
 
@@ -100,6 +100,6 @@
             </li>
         </ul>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" type="module"></script>
 </body>
 </html>
